# OpenJTX-A9

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
OpenJTX_A9/: OpenJTX_A9.qmlproject  OpenJTX_A9.qmlproject.qtds
OpenJTX_A9/OpenJTX_A9/: Constants.qml  qmldir
OpenJTX_A9/OpenJTX_A9/designer/: plugin.metainfo
OpenJTX_A9/OpenJTX_A9Content/: App.qml  Screen01.ui.qml
lib/QScale/: qscale.cpp  qscale.h
lib/qcustomplot/: qcustomplot.cpp
resources/: OpenJTXA9.qrc
resources/icons/: OpenJTXA9.icns
resources/icons/project/: OpenJTXA9.af
resources/linux/: OpenJTXA9.desktop
resources/windows/: OpenJTXA9.rc
src/: ComboBoxHelper.h  PortComboBox.h  SerialManager.cpp  SerialManager.h  main.cpp  mainWindow.cpp  mainWindow.h  types.h
src/tabs/: ChargingUSBTab.h  CurveHistoryTab.h  VoltageTab.h
translations/: OpenJTX_A9_en.ts  OpenJTX_A9_pt_BR.ts
ui/: CurveHistoryTab.h  DiodeVoltageTab.h  MainWindow.ui  VoltageTab.h  WarnDialog.ui
